--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
-    "express-fileupload": "^1.1.6-alpha.4",
+    "express-fileupload": "^1.1.6-alpha.5",
     "express-session": "^1.16.2",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "mysql": "^2.17.1",
     "req-flash": "0.0.3",
-    "then-busboy": "^4.4.0"
+    "then-busboy": "^4.4.0",
+    "uniqid": "^5.0.3"
   }
 }
