--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nodemon": "^1.19.2",
     "req-flash": "0.0.3",
     "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0",
     "then-busboy": "^4.4.0",
     "uniqid": "^5.0.3"
   }
